--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -494,7 +494,7 @@ form .password{
 
 ._submit{
     width: 100%;
-    height: 50px;
+    height: 40px; /*Estaba en 50*/
     border: 1px solid;
     background: #f8ba37;
     border-radius: 25px;
@@ -504,6 +504,7 @@ form .password{
     outline: none;
     text-align: center;
     text-decoration: none;
+    padding-top: 10px; /*Código nuevo*/
 }
 
 ._submittext{
