--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -548,15 +548,51 @@ form .password{
     font-size: 16px;
 }
 
-.registrarse a{
+/*.registrarse a{
     color: blue;
     cursor:pointer;
-}
+}*/
 
-.registrarse:hover{
+/*.registrarse:hover{
     text-decoration: underline;
+}*/
+
+.registro_boton{
+    width: 50%;
+    height: 40px;
+    border: 1px solid;
+    background: #f8ba37;
+    border-radius: 25px;
+    font-size: 18px;
+    color:#fff;
+    cursor: pointer;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 10px; /*Ajustarlo al boton*/
+    margin: 0 80px;
 }
 
+.entradas_boton{
+    width: 20%;
+    height: 40px;
+    border: 1px solid;
+    background: #f8ba37;
+    border-radius: 25px;
+    font-size: 18px;
+    color:#fff;
+    cursor: pointer;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 10px; /*Ajustarlo al boton*/
+}
+
+._entradastext{
+    text-align: center;
+    text-decoration: none;
+    color: #000;;
+}
 @media (max-width:600px){
 
     .expo{
