--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -176,6 +176,10 @@ video{
    
 }
 
+.expos{
+    color:#000;
+}
+
 .expo_info{
     text-align: justify;
     font-family: Roboto;
@@ -288,6 +292,9 @@ video{
 
 .footer__newsletter{
     color:#000;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
 .footer__inputs{
@@ -298,7 +305,7 @@ video{
 
 .footer__input{
     background-color: #fff;
-    height: 50px;
+    height: 40px;
     display: block;
     padding-left: 10px;
     border-radius: 6px;
